# OffScreenDepthRender

./: CMakeLists.txt  README.md
src/: main_automate_add_texture.cpp  main_convert_off2obj.cpp  main_generate_poses_bounding_sphere.cpp  main_opengl_render_rgb_depth.cpp
src/tinyobjloader/: test.cpp  tiny_obj_loader.cc
src/utils/: map_object_label2training_label.h
